<resources>
    <string name="app_name">Med Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="content_desc">image</string>

    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="my_profile">My Profile</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="share">Share</string>
    <string name="sign">Sign out</string>

    <string name="dashboard_head_text">My active medications</string>

    <string name="hours">Hour(s)</string>
    <string-array name="freq_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="no_active_med">You do not have any active medications. Tap the + button to add one.</string>
    <string name="no_match_found">No match found for that search</string>
    <string name="new_med_form">New medication form</string>
    <string name="form_message">Please fill the short form below to add a new medication</string>
    <string name="name">Name</string>
    <string name="med_name_hint">Pharma-quine</string>
    <string name="med_desc">Description (optional; include prescribing doctor, hospital, shape of pills, etc)</string>
    <string name="med_desc_hint">Description</string>
    <string name="med_freq">Frequency (in hours)</string>
    <string name="med_start">Start date</string>
    <string name="med_end">End date</string>
    <string name="add_med">ADD MEDICATION</string>
    <string name="set_med_end">set end date</string>
    <string name="set_med_start">set start date</string>
    <string name="delete">Delete</string>
    <string name="drug_details">Drug details</string>
    <string name="back">Back</string>
    <string name="take_drug">Take drug</string>
    <string name="sign_in_message">*Signing in with a google account will enable you to save your medication history online and to sync this data across all your devices.\nIf you don\'t sign in, your data will be lost when you uninstall the app</string>
    <string name="sign_out">Sign out</string>

</resources>
