<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.nwagu.medmanager.NewMedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_med_form"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_message"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/med_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/med_name_hint"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_desc"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/med_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/med_desc_hint"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_freq_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_freq"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/freq_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/freq_array"
            android:prompt="@string/hours"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/med_start_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_start"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_set_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_med_start"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/med_end_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_end"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_set_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_med_end"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_add_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_med"
            android:layout_gravity="end"
            android:textColor="@android:color/holo_red_dark"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</ScrollView>
