<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/noavatar"

                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_history"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/history" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>